label for index page

--- a/app/views/knowledgebase/index.html.erb
+++ b/app/views/knowledgebase/index.html.erb
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1>Knowledgebase</h1>
+<h2>noviny.cz</h2>
 <% @paragraphs.each do |paragraph| %>
 	<%= paragraph.text.to_s %><br/>
 <% end %>
